--- a/Engine/ProjectFiles/MGEngine/MGEngine.vcxproj
+++ b/Engine/ProjectFiles/MGEngine/MGEngine.vcxproj
@@ -112,71 +112,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Config\D3D12Config.h" />
-    <ClInclude Include="..\..\Config\EngineConfig.h" />
-    <ClInclude Include="..\..\Config\VulkanConfig.h" />
-    <ClInclude Include="..\..\Config\WindowsConfig.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\ApplicationDelegate\IApplicationDelegate.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\CoreArchitecture.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\CoreBuildConfiguration.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\CoreDefines.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\CoreIdentifiers.h" />
+    <ClInclude Include="..\..\Source\Runtime\Core\AppDelegate\IAppDelegate.h" />
+    <ClInclude Include="..\..\Source\Runtime\Core\CoreEngine.h" />
     <ClInclude Include="..\..\Source\Runtime\Core\CoreInclude.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\CoreMacros.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\CorePlatform.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\CoreTypes.h" />
-    <ClInclude Include="..\..\Source\Runtime\Core\Engine\Engine.h" />
-    <ClInclude Include="..\..\Source\Runtime\Debugging\Log\DebugLog.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\DXGIFactoryWrapper\DXGIFactoryWrapper.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\D3D12\D3D12GraphicsAPIStartup.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\GraphicsAPIStartup.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\IGraphicsAPIStartup.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\D3D12\D3D12GraphicsSystemInfo.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\GraphicsSystemInfo.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\IGraphicsSystemInfo.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\LowLevelGraphics\LowLevelGraphics.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\XPGL\AdapterOutput\AdapterOutput.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\XPGL\AdapterOutput\D3D12\D3D12AdapterOutput.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\XPGL\AdapterOutput\IAdapterOutput.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\XPGL\PhysicalDevice\D3D12\D3D12PhysicalDevice.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\XPGL\PhysicalDevice\IPhysicalDevice.h" />
-    <ClInclude Include="..\..\Source\Runtime\Graphics\XPGL\PhysicalDevice\PhysicalDevice.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformTimer\IPlatformTimer.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformTimer\PlatformTimer.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformTimer\Win32\Win32PlatformTimer.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformWindow\IPlatformWindow.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformWindow\PlatformWindow.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformWindow\Win32\Win32PlatformWindow.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Platform\IPlatform.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Platform\Platform.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Platform\Win32\Win32Platform.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\SystemInfo\ISystemInfo.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\SystemInfo\SystemInfo.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\SystemInfo\Win32\Win32SystemInfo.h" />
-    <ClInclude Include="..\..\Source\Runtime\Includes\DebugIncludes.h" />
-    <ClInclude Include="..\..\Source\Runtime\Includes\GraphicsIncludes.h" />
-    <ClInclude Include="..\..\Source\Runtime\Includes\MathIncludes.h" />
-    <ClInclude Include="..\..\Source\Runtime\Includes\RenderingIncludes.h" />
-    <ClInclude Include="..\..\Source\Runtime\Math\Matrix\Matrix3x3.h" />
-    <ClInclude Include="..\..\Source\Runtime\Math\Vector\Vector3D.h" />
-    <ClInclude Include="..\..\Source\Runtime\Rendering\VirtualCamera\VirtualCamera.h" />
-    <ClInclude Include="..\..\Source\ThirdParty\GeometryGenerator\GeometryGenerator.h" />
+    <ClInclude Include="..\..\Source\Runtime\Platform\Application\Win32Application.h" />
+    <ClInclude Include="..\..\Source\Runtime\Platform\Timer\Win32PlatformTimer.h" />
+    <ClInclude Include="..\..\Source\Runtime\Platform\Window\Win32Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Source\Runtime\Core\Engine\Engine.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Debugging\Log\DebugLog.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Graphics\DXGIFactoryWrapper\DXGIFactoryWrapper.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\D3D12\D3D12GraphicsAPIStartup.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\D3D12\D3D12GraphicsSystemInfo.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Graphics\LowLevelGraphics\LowLevelGraphics.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Graphics\XPGL\AdapterOutput\D3D12\D3D12AdapterOutput.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Graphics\XPGL\PhysicalDevice\D3D12\D3D12PhysicalDevice.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\HAL\PlatformTimer\Win32\Win32PlatformTimer.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\HAL\PlatformWindow\Win32\Win32PlatformWindow.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\HAL\Platform\Win32\Win32Platform.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\HAL\SystemInfo\Win32\Win32SystemInfo.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\Rendering\VirtualCamera\VirtualCamera.cpp" />
-    <ClCompile Include="..\..\Source\ThirdParty\GeometryGenerator\GeometryGenerator.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Core\CoreEngine.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Platform\Application\Win32Application.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Platform\Timer\Win32PlatformTimer.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Platform\Window\Win32Window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
